--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <html lang="PT-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Tribute Page to Juicy Wrld - Rapper">
+    <meta name="description" content="Tribute Page para Juicy Wrld - Rapper">
     <meta name="author" content="Leonam Santana">
     <meta name="application-name" content="VS Code"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute-Page - Juicy Wrld</title>
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="style.css">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Russo+One&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="mx-2 my-4">
     
+    <main class="container-fluid" id="main">
+        <h1 id="title">JUICE Wrld</h1>
+        <p>Rapper, cantor, compositor e músico americano</p>
+
+        <figure id="img-div">
+            <img src="img/Juice-Wrld.jpg" alt="Foto de Juice-Wrld" class="img-fluid">
+            <figcaption id="img-caption">
+                Jarad Anthony Higgins, conhecido profissionalmente como Juice WRLD (pronunciado "Juice World"),
+                foi um rapper, cantor, compositor e músico americano, Era mais conhecido por seus singles de sucesso
+                 "All Girls Are the Same" e "Lucid Dreams", que o ajudaram a ganhar um contrato de gravação com a Grade
+                  A Productions de Lil Bibby e a Interscope Records.
+            </figcaption>
+        </figure>
+    </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
