--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                     "What's the 27 Club? We ain't making it past 21."
                 </blockquote>
 
-                <p class="text-center">Se quiser conhecer mais sobre a História de Jarada Juice, você encontrará no <a href="https://pt.wikipedia.org/wiki/Juice_Wrld" target="_blank">Wikipedia</a> </p>
+                <p class="text-center">Se quiser conhecer mais sobre a História de Jarada Juice, você encontrará no 
+                    <a id="tribute-link" href="https://pt.wikipedia.org/wiki/Juice_Wrld" target="_blank">Wikipedia</a> 
+                </p>
                 </div>
 
             </div>
